Using flexbox here to try to avoid some jumpiness on FF.
We'll see.

--- a/frontend/src/modules/cloud-launcher/launcherUi/providers/style.less
+++ b/frontend/src/modules/cloud-launcher/launcherUi/providers/style.less
@@ -161,12 +161,15 @@ providers {
           font-size: 1.2em;
           font-weight: bold;
 
+          display: flex;
+          justify-content: center;
+
           .banner {
-            text-align: center;
+            flex: 0 0 auto;
 
             transform: rotate(-45deg);
 
-            // background-color: red;
+            transform-origin: 50% 0%;
           }
         }
       }
